# aws-rss-feed-bot

./: .envrc.template  .flake8  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
pulumi/: .envrc.template  Makefile  Pulumi.yaml  __main__.py  pyproject.toml
src/aws_rss_feed_bot/: cli.py  configuration.py  handler.py  openai.py  rss.py  run.py  s3.py  slack.py  utils.py
