[tool.poetry]
name = "aws-rss-feed-bot"
version = "0.1.0"
description = ""
authors = ["Kyle Pitzen <kpitzen@pulumi.com>"]
readme = "README.md"
packages = [{from = "src", include = "aws_rss_feed_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.4"
feedparser = "^6.0.10"
boto3 = "^1.26.118"
pendulum = "^2.1.2"
pydantic = "^1.10.7"
click = "^8.1.3"
beautifulsoup4 = "^4.12.2"
tiktoken = "^0.3.3"
tqdm = "^4.65.0"

[tool.poetry.scripts]
cli = "aws_rss_feed_bot.cli:main"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
mypy = "^1.2.0"
bandit = "^1.7.5"
black = "^23.3.0"
boto3-stubs = "^1.26.118"
flake8 = "^6.0.0"
types-beautifulsoup4 = "^4.12.0.3"
types-tqdm = "^4.65.0.1"

[[tool.mypy.overrides]]
module = "feedparser.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
