[tool.poetry]
name = "aws-feed-parser-infra"
version = "0.1.0"
description = ""
authors = ["Kyle Pitzen <kpitzen@pulumi.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pulumi = ">=3.64.0"
pulumi-aws-native = ">0.8.0"
pulumi-docker = "^4.2.0"
pulumi-aws = "^5.39.0"
boto3 = "^1.26.127"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
